@@ -1,24 +1,21 @@
 /*
- * Copyright © 2015 David Sargent
+ * Copyright © 2016 David Sargent
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software
  * and associated documentation files (the "Software"), to deal in the Software without restriction,
  * including without limitation  the rights to use, copy, modify, merge, publish, distribute, sublicense,
- *  and/or sell copies of the Software, and  to permit persons to whom the Software is furnished to
- *  do so, subject to the following conditions:
+ * and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to
+ * the following conditions:
  *
  * The above copyright notice and this permission notice shall be included in all copies or
  * substantial portions of the Software.
  *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
- *  BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
- *  NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
- *  DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ * BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+ * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
+ * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+ * FROM,OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
-
 package org.ftccommunity.ftcxtensible.robot;
-
-import android.util.Log;
 
 import com.google.common.base.Strings;
 import com.google.common.cache.Cache;
@@ -26,6 +23,9 @@ import com.google.common.cache.CacheBuilder;
 import com.google.common.collect.EvictingQueue;
 import com.google.common.collect.LinkedHashMultimap;
 import com.google.common.collect.Multiset;
+
+import android.util.Log;
+
 import com.qualcomm.robotcore.robocol.Telemetry;
 
 import org.ftccommunity.ftcxtensible.internal.Alpha;
@@ -40,31 +40,36 @@ import java.util.LinkedList;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Queue;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 
 import static com.google.common.base.Preconditions.checkArgument;
+import static com.google.common.base.Preconditions.checkNotNull;
 
 @Alpha
 @NotDocumentedWell
 public class ExtensibleTelemetry {
-    private static final String EMPTY = "";
-    private static final String SPACE = " ";
-    
     public static final int DEFAULT_DATA_MAX = 192;
     public static final int MAX_DATA_MAX = 255;
+    private static final String EMPTY = "";
+    private static final String SPACE = " ";
     private static final String TAG = "XTENSILBLE_TELEMETRY::";
     private final Telemetry parent;
     private final int dataPointsToSend;
 
     private final EvictingQueue<String> dataCache;
     private final LinkedHashMultimap<String, String> data;
-
     private final Cache<String, String> cache;
     private final Queue<String> log;
+
     private Process logcat;
     private BufferedReader reader;
+
     private long lastModificationTime;
-    private long cacheBuildTime;
+
+    private ScheduledExecutorService executorService;
 
     public ExtensibleTelemetry(@NotNull Telemetry telemetry) {
         this(DEFAULT_DATA_MAX, telemetry);
@@ -80,41 +85,44 @@ public class ExtensibleTelemetry {
                 concurrencyLevel(4).
                 expireAfterAccess(250, TimeUnit.MILLISECONDS).
                 maximumSize(dataPointsToSend).build();
-        
-        dataCache = EvictingQueue.create((int)(dataPointsToSend * .75));
+
+        dataCache = EvictingQueue.create((int) (dataPointsToSend * .75));
         data = LinkedHashMultimap.create();
         log = new LinkedList<>();
 
         try {
-            logcat = Runtime.getRuntime().exec("logcat -v time *:W");
+            logcat = Runtime.getRuntime().exec(new String[] {"logcat", "*:I"});
             reader = new BufferedReader(new InputStreamReader(logcat.getInputStream()));
         } catch (IOException e) {
             Log.e(TAG, "Cannot start logcat monitor", e);
         }
+
+        executorService = Executors.newSingleThreadScheduledExecutor();
+        executorService.scheduleAtFixedRate(new SendDataRunnable(), 250, 250, TimeUnit.MILLISECONDS);
     }
 
-    public void data(String tag, String message) {
+    public synchronized void data(String tag, String message) {
         checkArgument(!Strings.isNullOrEmpty(message), "Your message shouldn't be empty.");
         tag = Strings.nullToEmpty(tag);
-        
+
         synchronized (dataCache) {
             lastModificationTime = System.nanoTime();
             dataCache.add((!tag.equals(EMPTY) ? tag.toUpperCase(Locale.US) + SPACE : EMPTY) + message);
         }
     }
 
-    public void addPersistentData(String tag, String mess) {
+    public synchronized void addPersistentData(String tag, String mess) {
         synchronized (data) {
             lastModificationTime = System.nanoTime();
             data.put(tag, mess);
         }
     }
 
-    public void data(String tag, double message) {
+    public synchronized void data(String tag, double message) {
         data(tag, Double.toString(message));
     }
 
-    public void updateLog() {
+    void updateLog() {
         //String temp = null;
            /* StringBuilder buf = new StringBuilder();
             try {
@@ -129,21 +137,30 @@ public class ExtensibleTelemetry {
             log.add(buf.toString());*/
     }
 
-    public void close() throws IOException {
+    synchronized void close() throws IOException {
+        executorService.shutdown();
         reader.close();
         logcat.destroy();
-
-        parent.clearData();
-
-        log.clear();
-        dataCache.clear();
-        data.clear();
-        cache.invalidateAll();
+        synchronized (parent) {
+            parent.clearData();
+        }
+        synchronized (log) {
+            log.clear();
+        }
+        synchronized (dataCache) {
+            dataCache.clear();
+        }
+        synchronized (data) {
+            data.clear();
+        }
+        synchronized (cache) {
+            cache.invalidateAll();
+        }
     }
 
-    public void updateCache() {
+    void updateCache() {
         int cacheSize = (int) cache.size();
-        if (lastModificationTime > cacheBuildTime) {
+        if (lastModificationTime > 0) {
             forceUpdateCache();
         } else {
             cache.cleanUp();
@@ -152,8 +169,8 @@ public class ExtensibleTelemetry {
             }
         }
     }
-    
-    public void forceUpdateCache() {
+
+    synchronized void forceUpdateCache() {
         updateLog();
 
         int numberOfElements;
@@ -162,10 +179,10 @@ public class ExtensibleTelemetry {
 
             synchronized (dataCache) {
                 int numberOfElementsAdded = 0;
-                int min = Math.min(dataCache.size(),
-                        (int) (dataPointsToSend * .75));
+                int min = Math.min(dataCache.size(), (int) (dataPointsToSend * .75));
+                int stringLength = String.valueOf(min).length();
                 for (; numberOfElementsAdded < min; numberOfElementsAdded++) {
-                    cache.put(String.valueOf(numberOfElementsAdded), dataCache.poll());
+                    cache.put(cancelOut(stringLength, String.valueOf(numberOfElementsAdded)), dataCache.poll());
                 }
                 numberOfElements = numberOfElementsAdded;
             }
@@ -179,9 +196,9 @@ public class ExtensibleTelemetry {
                     LinkedList<String> dataElements = new LinkedList<>(data.get(key.getElement()));
 
                     int size = dataElements.size();
+
                     for (int index = 0; numberOfElementsAdded < size; numberOfElementsAdded++) {
-                        StringBuilder builder = new StringBuilder(key.getElement().length() + String.valueOf(index).length());
-                        entries.put(builder.append(key.getElement()).append(Integer.toString(index)).toString(), dataElements.get(index));
+                        entries.put(cancelOut(1, key.getElement() + Integer.toString(index)), dataElements.get(index));
                     }
                 }
 
@@ -199,10 +216,13 @@ public class ExtensibleTelemetry {
         }
     }
 
-    public void sendData() {
+    synchronized void sendData() {
         updateCache();
 
-        LinkedList<Map.Entry<String, String>> data = new LinkedList<>(cache.asMap().entrySet());
+        LinkedList<Map.Entry<String, String>> data;
+        synchronized (cache) {
+            data = new LinkedList<>(cache.asMap().entrySet());
+        }
         for (Map.Entry<String, String> entry : data) {
             parent.addData(entry.getKey(), entry.getValue());
         }
@@ -214,6 +234,32 @@ public class ExtensibleTelemetry {
                 for (; numberOfElementsAdded < min; numberOfElementsAdded++) {
                     parent.addData("xLog" + String.valueOf(numberOfElementsAdded), log.poll());
                 }
+            }
+        }
+    }
+
+    /**
+     * Pads the end of a string with enough "\b" characters to cancel out the original string, if
+     * it is every printed
+     * @param string the string to cancel out
+     * @return the string padded with {@code '\b'} characters
+     */
+    @NotNull
+    private String cancelOut(int length, @NotNull String string) {
+        return  Strings.padStart(checkNotNull(string), length, '0');
+    }
+
+    private class SendDataRunnable implements Runnable {
+        /**
+         * Starts executing the active part of the class' code. This method is called when a thread is
+         * started that has been created with a class which implements {@code Runnable}.
+         */
+        @Override
+        public void run() {
+            try {
+                sendData();
+            } catch (Exception ex) {
+                Log.w(TAG, "Telemetry Sender threw an exception while executing.", ex);
             }
         }
     }
